2022-11-11: [BUGFIX] Fix `RectDecoration` clipping when widget is resized
2022-11-11: [BUGFIX] Fix menu position for `StatusNotifier` and `GlobalMenu` widgets
2022-11-10: [BUGFIX] Better handling of decorations on mirrored widgets
2022-11-10: [BUGFIX] Fix `Visualiser` segfault
2022-11-08: [FEATURE] Add improvements to `StatusNotifier` menus
2022-11-07: [FEATURE] Add ability to resize icons in `ALSAWidget` 
2022-11-06: [BUGFIX] `WiFiIcon` internet check handles other exceptions
2022-11-05: [BUGFIX] Hide `LiveFootballScores` widget when no match
2022-11-01: [BUGFIX] Fix `StatusNotifier` menu bug where submenus do not appear
2022-10-27: [BUGFIX] Fix Graph widgets to work with decorations
2022-10-26: [FEATURE] `WiFiIcon`: Disable background internet check by default
2022-10-25: [BUGFIX] Fix padding in `TooltipMixin`
2022-10-25: [FEATURE] Allow overriding of colours for `PowerLineDecoration`
2022-10-20: [FEATURE] `WiFiIcon`: Add ability to always show SSID
2022-10-20: [FEATURE] `WiFiIcon`: Add test to check whether device is connected to the internet
2022-10-16: [FEATURE] Add `ContinuousPoll` widget
2022-10-15: [BUGFIX] Fix `RectDecoration` reload bug with `use_widget_background`
2022-10-10: [UPSTREAM] Change command syntax to match changes to qtile codebase (needs latest git version of qtile)
2022-10-05: [BUGFIX] Fix IndexError on grouped `RectDecoration` (issue #126)
2022-10-04: [BUGFIX] Fix `extrawidth` with `PowerlineDecoration`
2022-10-04: [FEATURE] Allow users to add extra width at the end of a decoration.
2022-10-04: [BUGFIX] Fix `Visualizer` image size bug
2022-10-04: [TESTS] Pin `pytest-cov` to 3.0.0 to retain `multiprocessing` support
2022-09-24: [BUGFIX] Improve icon background rendering in `Systray` with `RectDecoration`
2022-02-22: [RELEASE] v0.22.1 (skipped v0.22.0)
2022-09-22: [BUGFIX] Stop multiple visualiser processes being spawned by widget
2022-09-19: [FEATURE] Add `Visualizer` widget